# computer_club

./: CMakeLists.txt  README.md  club_settings.h  computer_club.cpp  computer_club.h  computer_manager.cpp  computer_manager.h  event_reader.cpp  event_reader.h  main.cpp
examples/: example1.txt  example2.txt
src/: computer_manager.cpp  computer_manager.h  timeto24h.cpp  timeto24h.h
src/computer_club/: club_settings.h  computer_club.cpp  computer_club.h  event_reader.cpp  event_reader.h  table.h
src/events/: event.cpp  event.h  in_events.cpp  in_events.h  out_events.cpp  out_events.h
